<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="102dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="#1D9E22"
        android:text="@string/login"
        android:onClick="dashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="115dp"
        android:layout_height="46dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="86dp"
        android:backgroundTint="#DD2719"
        android:text="@string/cancel"
        android:onClick="home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="227dp"
        android:layout_height="210dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/log" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="260dp"
        android:layout_height="57dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="70dp"
        android:text="@string/title"
        android:textColor="#207AC1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="268dp"
        android:layout_height="46dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#29AF2F"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textEmailAddress"
        android:textColor="#25D32C"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="264dp"
        android:layout_height="48dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="#33B538"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.721"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

</androidx.constraintlayout.widget.ConstraintLayout>